# Dungeons-and-Greed

./: .gitignore  CMakeLists.txt  README.md  hello.c  temp.txt  test.c
src/: events.c  events.h  inits.c  inits.h  main.c  player.c  render.c  render.h
src/client/: CMakeLists.txt  client.c  main.c
src/client/client-lib/: clientNet.c  clientNet.h
src/lib/: enemy.c  enemy.h  events.c  events.h  game.c  game.h  hud.c  hud.h  inits.c  inits.h  menu.c  menu.h  player.c  player.h  render.c  render.h
src/lib/NET/: networkInterface.c  networkInterface.h
src/lib/world/: rooms.h  world.c  world.h
src/server/: CMakeLists.txt  main.c  server.c
src/server/server-lib/: networkInterface.c  networkInterface.h  serverNet.c  serverNet.h
